--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@ body {
     margin: 0;
     font-family: Arial, sans-serif;
     color: #f8f8f8;
-    background: linear-gradient(to bottom, #011a6e, black);
+    background: linear-gradient(  #011a6e, black);
 }
 
 header {
@@ -15,32 +15,28 @@ header {
 }
 
 img {
-    width: 190px;
-    height: 55px;
+    width: 175px;
+    height: 60px;
 }
 
 nav button {
     margin-left: 10px;
     padding: 8px 12px;
-    border: none;
-    background-color: #ffffff88;
+    border-radius: 5px;
+    background-color: #ffff;
     color: #004080;
     cursor: pointer;
-    font-size: 14px;
-}
-
-nav button:hover {
-    background-color: #ffffffaa;
+    font-size: 16px;
+    
 }
 
 main {
     padding: 20px;
 }
 
-/* Seções (cards) */
+/* cards */
 .secao {
     display: none;
-    /* 🔴 todas começam escondidas */
     padding: 20px;
     flex-wrap: wrap;
     justify-content: center;
@@ -48,7 +44,7 @@ main {
 
 .secao.active {
     display: flex;
-    /* 🔵 só a ativa aparece */
+    
 }
 
 .card {
@@ -109,4 +105,6 @@ main {
     height: 200px;
     border: 0;
     margin-top: 10px;
+   
 }
+
