--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@ body {
     margin: 0;
     font-family: Arial, sans-serif;
     color: #f8f8f8;
-    background: linear-gradient(  #011a6e, black);
+    background-color: #011a6e;
 }
 
 header {
@@ -47,6 +47,20 @@ main {
     
 }
 
+
+/*dois cards, quando for selecionado o card vai um por vez*/
+
+.card {
+  border: 2px solid #0264c5; /* cor da borda */
+  border-radius: 10px;
+  box-shadow: 0 0 10px #0264c5, 0 0 20px #0264c5; /* brilho */
+  transition: 0.3s;
+}
+
+.card:hover {
+  box-shadow: 0 0 20px #0264c5, 0 0 40px #0264c5 inset;
+}
+
 .card {
     margin: 15px;
     background-color: #ffffff;
@@ -56,6 +70,7 @@ main {
     text-align: center;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
 }
+
 
 .card img {
     width: 100%;
@@ -91,20 +106,107 @@ main {
     background-color: #004080;
 }
 
+
 /* localização */
 .location {
     margin-top: auto;
     padding: 20px;
-    background-color: #001a4d;
+    background: linear-gradient(  #011a6e, #0044cc);
     color: white;
     text-align: center;
 }
 
 .mapa {
-    width: 300px;
-    height: 200px;
+    width: 100px;
+    height: 100px;
     border: 0;
     margin-top: 10px;
    
+}
+
+footer {
+    background-color: #0044cc;
+    color: #fff;
+    padding: 5px;
+    text-align: center;
+}
+
+
+.linha-custom {
+  height: 2px;
+  background: linear-gradient(to right, #ffffff, #0044cc, #ffffff);
+  margin: 40px auto;
+  width: 100%;
+  border-radius: 2px;
+
+}
+
+/*noticias designer*/
+
+#noticias {
+    text-align: center;
+    padding: 40px 20px;
+    background-color: #011a6e;
+    
+}
+
+
+.noticia {
+    width: 400px;
+    position: relative;
+    border-radius: 10px;
+    overflow: hidden;
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
+    transition: transform 0.3s ease;
+    margin: 0 30px;
+}
+
+.noticia:hover {
+    transform: scale(1.05);
+}
+
+.noticia img {
+    width: 100%;
+    height: 210px;
+    object-fit: cover;
+}
+
+.overlay {
+    position: absolute;
+    bottom: -100%;
+    left: 0;
+    right: 0;
+    background: rgba(0, 0, 0, 0.7);
+    color: white;
+    padding: 10px;
+    text-align: left;
+    transition: bottom 0.3s ease;
+}
+
+.noticia:hover .overlay {
+    bottom: 0;
+}
+
+.overlay h3 {
+    font-size: 18px;
+    margin-bottom: 10px;
+}
+
+.overlay p {
+    font-size: 14px;
+    margin-bottom: 10px;
+}
+
+.overlay a {
+    background-color: #001C43;
+    color: white;
+    padding: 6px 12px;
+    text-decoration: none;
+    border-radius: 5px;
+    font-weight: bold;
+}
+
+.overlay a:hover {
+    background-color: #003366;
 }
 
