--- a/styles.css
+++ b/styles.css
@@ -14,10 +14,15 @@ header {
     justify-content: space-between;
 }
 
+
+    
+
 img {
     width: 175px;
     height: 60px;
 }
+
+
 
 nav button {
     margin-left: 10px;
@@ -76,7 +81,9 @@ main {
     width: 100%;
     height: 200px;
     object-fit: cover;
-    border-radius: 8px;
+    display: flex;
+    border-radius: 4px;
+        
 }
 
 .card h3 {
@@ -135,7 +142,7 @@ footer {
 .linha-custom {
   height: 2px;
   background: linear-gradient(to right, #ffffff, #0044cc, #ffffff);
-  margin: 40px auto;
+  margin: 20px auto;
   width: 100%;
   border-radius: 2px;
 
@@ -209,4 +216,3 @@ footer {
 .overlay a:hover {
     background-color: #003366;
 }
-
